[project]
name = "slint-testing-e2e-leaf"
version = "0.1.0"
description = "E2E test fixture for ui-testing-site: leaf package."
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slint_testing_e2e_leaf"]
