[project]
name = "slint-testing-e2e-trunk"
version = "0.1.0"
description = "E2E test fixture for ui-testing-site: depends on leaf."
requires-python = ">=3.9"
dependencies = ["slint-testing-e2e-leaf>=0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slint_testing_e2e_trunk"]
